fx2j-parser/src/test/resources/element/valid/static-property-child.fxml
<?language javascript?>

<?import javafx.scene.layout.VBox?>
<?import javafx.geometry.Insets?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <GridPane.margin>
        <Insets/>
    </GridPane.margin>
</VBox>