fx2j-parser/src/test/resources/element/invalid/static-property-attribute.fxml
<?language javascript?>

<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <GridPane.alignment text=""/>
</VBox>